Se realizan metodos de pruebas junit para las ramas de cada metodo